# logicraft

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: attributions.md
assets/html/: index.html
backend/: Cargo.toml  README.md
backend/src/: config.rs  error.rs  main.rs  test_routes.rs
backend/src/web/: mod.rs  routes_login.rs
examples/: quick_dev.rs
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.html
frontend/src/components/: Navbar.svelte
frontend/src/routes/: +page.svelte
html/: index.html
sql/: create_login_schema.sql  db_manager_privileges.sql  postgresql_command_guide.md  useful_sql.md
src/: errors.rs  main.rs  test_routes.rs
tester/: Cargo.toml  README.md
tester/src/: hash_password.rs  main.rs  quick_dev.rs  route_tester.rs  test_routes.rs
web/public/: global.css  index.html
