[package]
name = "logicraft"
version = "0.1.0"
edition = "2021"
authors = ["Yrrrrrf <fernandorezacampos@gmail.com>"]
description = "A sample of an Axum web server that interprets logic circuits and return metrics about them."
repository = "https://github.com/Yrrrrrf/logicraft"
license = "MIT"
readme = "README.md"
keywords = [
    "logic prop", 
    "karnaught", 
    "server"
]
categories = [
    "web-programming", 
    "network-programming", 
    "logic", 
    "popositional algebra",
]

# add examples/quick_dev.rs to the examples
# [examples]
# quick_dev = { path = "examples/quick_dev.rs" }


[dependencies]
# tracing
tracing = "0.*" # (https://docs.rs/tracing/latest/tracing/)
tracing-subscriber = { version = "0.*", features = ["env-filter"] } # (https://docs.rs/tracing-subscriber/latest/tracing_subscriber/)
# dev
dev_utils = "0.*"  # (https://docs.rs/dev_utils/latest/dev_utils/)
# web
axum = "0.*"  # (https://docs.rs/axum/latest/axum/)
tokio = { version = "1.*", features = ["full"] }  # (https://docs.rs/tokio/latest/tokio/) (tokio allows to use the async/await syntax)
hyper = { version = "*", features = ["full"] }  # (https://docs.rs/hyper/latest/hyper/) (hyper allows to use the http client)
tower-http = { version = "0.5", features = ["fs"] }  # (https://docs.rs/tower-http/latest/tower_http/)
tower = "0.*" # (https://docs.rs/tower/latest/tower/)
# # sql
# sqlx = { version = "0.*", features = ["runtime-tokio-rustls", "macros"] } # (https://docs.rs/sqlx/latest/sqlx/)
# # json
serde = { version = "1.*", features = ["derive"] }  # (https://docs.rs/serde/latest/serde/)
serde_json = "1.*"  # (https://docs.rs/serde_json/latest/serde_json/)
serde_with = "*"  # (https://docs.rs/serde_with/latest/serde_with/)

[dev-dependencies]
anyhow = "1.*"  # (https://docs.rs/anyhow/latest/anyhow/)
httpc-test = "0.*"  # (https://docs.rs/httpc-test/latest/httpc_test/)


[features]
default = []  # no features by default
