[package]
name = "tester"
version = "0.1.0"
edition = "2021"
authors = ["Yrrrrrf <fernandorezacampos@gmail.com>"]
description = "Tester for logicraft"
repository = "https://github.com/Yrrrrrf/logicraft"


[[bin]]  # cargo run -p tester --bin routes
name = "routes"
path = "src/test_routes.rs"

[[bin]]  # cargo run -p tester --bin db
name = "db"
path = "src/db_tester.rs"

# [[bin]]  # cargo run -p tester --bin transact
# name = "transact"
# path = "src/transact_tester.rs"


[dependencies]
dev_utils = "0.0.11"
log = "0.4.*"  # (https://docs.rs/log/latest/log/)
# tokio is used to run async code
tokio = { version = "1.*", features = ["full"] }  # (https://docs.rs/tokio/latest/tokio/)
# anyhow is used to handle errors
anyhow = "1.*"  # (https://docs.rs/anyhow/latest/anyhow/)
# httpc is used to make HTTP requests
httpc-test = "0.*"  # (https://docs.rs/httpc-test/latest/httpc_test/)
serde_json = "1.*"  # (https://docs.rs/serde_json/latest/serde_json/)